--- a/Life-foods-api-csharp/appsettings.Development.json
+++ b/Life-foods-api-csharp/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "FoodConnection": "Server=.\\SQLEXPRESS;Initial Catalog=live-food-api-database;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
