added customer user not identity

--- a/Life-foods-api-csharp/appsettings.json
+++ b/Life-foods-api-csharp/appsettings.json
@@ -1,9 +1,12 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform 
 */
+  "AppSettings": {
+    "Secret": "This is my Secret. Secret must be much longer in production!!"
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "qualified.domain.name",
