Now with full identity jwt authentication bearer solution.

--- a/Life-foods-api-csharp/appsettings.json
+++ b/Life-foods-api-csharp/appsettings.json
@@ -5,7 +5,9 @@ before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform 
 */
   "AppSettings": {
-    "Secret": "This is my Secret. Secret must be much longer in production!!"
+    "Secret": "This is my Secret. A secret must be much longer in production!!",
+    "ValidAudience": "https://localhost:44358",
+    "ValidIssuer": "https://localhost:44358/"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
@@ -20,7 +22,12 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
+    },
+    //"JWT": {
+    //  "ValidAudience": "https://localhost:44358",
+    //  "ValidIssuer": "https://localhost:44358/",
+    //  "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+    //}
   },
   "AllowedHosts": "*"
 }
