cleanup usings, paging on get foods

--- a/Life-foods-api-csharp/Life-foods-api-csharp.csproj
+++ b/Life-foods-api-csharp/Life-foods-api-csharp.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Folder Include="Interfaces\V1\" />
   </ItemGroup>
 
 </Project>
